tests/src/test/resources/scala/tools/nsc/effects/purity/PuritySuite-files/freshnessNeg4.check
newSource:15: error: effect type mismatch;
 found   : @mod(d) @loc()
 required: @mod() @loc()
  def f13Tc(d: D): A13Trait @loc() = new A13Trait(d)
                                     ^
